<resources>
    <string name="txt_descripcion">Descripcion</string>
    <string name="txt_descripcion2">Descripcion2</string>
    <string name="app_name">Proyecto Grupo 1</string>

    <!--Activity strings main-->
    <string name="button_ir_paciente_prueba">Ir paciente</string>
    <string name="button_ir_doctor_prueba">Ir Doctor</string>
    <string name="name_company">HealthMedical</string>
    <string name="description_logo">Logo de empresa</string>
    <!-- Bienvenido Paciente -->
    <string name="hello">Hello!</string>
    <string name="name_user">Cristhian</string>
    <string name="description_profile">Profile</string>
    <string name="main_title_paciente">Panel Principal</string>
    <string name="description_main_activity">Escoja una de las siguientes opciones</string>
    <!-- Opciones Citas -->
    <string name="description_opcion_image">Ver Cita</string>
    <string name="option_go_list_citas">Ver Citas Agendadas</string>
    <string name="description_list_citas">Observa que citas tienes pendientes</string>
    <string name="option_go_nueva_cita">Agendar Nueva Cita</string>
    <string name="description_nueva_cita">Solicita una nueva cita con los mejores odontologos</string>
    <string name="option_cerrar_sesion">Cerrar Sesion</string>
    <string name="description_cerrar_sesion">Vuelve a la pantalla Login</string>
    <!--  Strings Pacientes  -->
    <!--  Buttons Mains -->

    <string name="btn_login_aceptar">Aceptar</string>
    <string name="btn_login_registrar">Registrar</string>
    <string name="btn_login_salir">Salir</string>

    <!-- =====================
        Create Cita Paciente
     ==========================-->
    <string name="title_create_cita">Agenda Nueva Cita</string>
    <string name="description_create_cita">Llena los datos del formulario</string>
    <string name="label_profesional">Profesional:</string>
    <string name="hint_profesional">Seleccione su profesional</string>
    <string name="label_service">Servicio: </string>
    <string-array name="array_professionals">
        <item>Dr. Gonzalez</item>
        <item>Dr. Perez</item>
        <item>Dra. Dolores</item>
        <item>Dra. Flores</item>
    </string-array>
    <string-array name="service_odontologia">
        <item>Limpieza Dental</item>
        <item>Endodoncia</item>
        <item>Ortopedia Maxilofacial</item>
        <item>Odontologia Preventiva</item>
    </string-array>
    <string name="lblfecha_inicio">Fecha Agendamiento Cita:</string>
    <string name="lblfecha_exp">Fecha Expiracion Cita:</string>
    <string name="hint_fecha">DD/MM/YYYY</string>
    <string name="lblsintomas">Sintomas: </string>
    <string name="hint_textarea_sintomas">Ingrese sus sintomas</string>
    <string name="btn_agendar">Agendar</string>
    <string name="btn_cancelar">Cancelar</string>
    <!-- =====================
        List Cita Paciente
     ==========================-->
    <string name="title_list_cita">Lista de tus citas</string>
    <string name="description_list_cita">Observa que citas tienes agendadas</string>

    <string name="data_fecha_cita1">17/08/2021</string>

    <string name="data_servicio">Limpieza Dental</string>
    <string name="data_name_doctor">Dra. Flores</string>
    <string name="data_consultorio">Health Medical</string>

    <string name="data_servicio1">Endodoncia</string>
    <string name="data_name_doctor1">Dra. Dolores</string>

    <string name="data_servicio2">Ortopedia Maxilofacial</string>
    <string name="data_name_doctor2">Dr. Gonzalez</string>

    <string name="data_servicio3">Odontologia Preventiva</string>

    <string name="btn_regresar">Regresar</string>

    <!-- =====================
        Detalle Cita Paciente
     ==========================-->
    <string name="title_detalle_cita">Detalle Cita: 23/07/2021</string>
    <string name="description_detalle_cita">Observa los detalles de la cita</string>


    <string name="especialidad_doctor">Odontologo</string>
    <string name="lbl_date_cita">Dia de la cita</string>
    <string name="data_cita_detalle">Viernes, Julio 23</string>
    <string name="lbl_time_cita">Hora de la cita</string>
    <string name="data_time_cita">15.00h</string>
    <string name="lbl_direccion_cita">Direccion</string>
    <string name="data_direccion_cita">Amarillo Health Medical Center <br /> 1984 Main Street - 24278 <br />
    Guayaquil, Guayas</string>
    <string name="lbl_phone_cita">Numero/Doctor</string>
    <string name="data_phone_cita">094987878</string>
    <string name="lbl_email_cita">Email/Doctor</string>
    <string name="data_email_cita">flores@gmail.com</string>
    <string name="lbl_notas_cita">Notas</string>
    <string name="data_notas_cita">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula auctor
        lacus malesuada fringilla. Cras tincidunt nisl vel est bibendum ornare. Integer
        ullamcorper rhoncus lectus a congue. Nulla facilisi. Aenean rutrum ac
        <br /> elit at dapibus. Phasellus rutrum vel nunc a pellentesque. Nulla egestas placerat
        <br /> gravida. Mauris non augue sit amet odio fermentum pretium malesuada at ipsum. Phasellus
        <br /> convallis ligula eu metus volutpat congue. Morbi lobortis mollis nibh, semper aliquet
        <br /> ligula cursus eget. Nam convallis mi purus, sed volutpat est tristique quis. Vivamus
        <br /> luctus metus id velit ullamcorper sodales. Proin accumsan sollicitudin urna quis sagittis.</string>

    <string name="edt_usuario">Usuario</string>
    <string name="edt_password">Contraseña</string>
    <string name="rd_paciente">Paciente</string>
    <string name="rd_doctor">Doctor</string>
    <!-- =====================
        Registro Usuario
     ==========================-->
    <string name="lbl_nombre">Nombres</string>
    <string name="lbl_cedula">Cedula</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_telefono">Telefono</string>
    <string name="lbl_password">Contraseña</string>

    <string name="hint_nombre">Ingrese sus nombres</string>
    <string name="hint_cedula">Ingrese su cedula</string>
    <string name="hint_email">Ingrese su correo</string>
    <string name="hint_telefono">Ingrese su telefono</string>
    <string name="hint_password">Ingrese su Contraseña</string>

    <string name="btn_registrar">Registrar</string>

    <string name="text_main_registrar_user">Registrate</string>
    <string name="txtDescriptionRegistrarte">Registrate para obtener beneficios</string>

    <string name="btn_eliminar">Cancelar Cita</string>
</resources>