<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrarUsuario"
    style="@style/bg_dark">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:text="@string/name_company"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#6C63FF"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_logo"
            android:focusableInTouchMode="false"
            android:paddingStart="145dp"
            android:paddingEnd="5dp"
            app:srcCompat="@drawable/ic_logo"
            tools:ignore="VectorDrawableCompat"
            tools:srcCompat="@drawable/ic_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_main_registrar_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_main_registrar_user"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescriptionRegistrarte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtDescriptionRegistrarte"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:fillViewport="false"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                style="@style/mb_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- Begin Spinner Professional   -->
                <ImageView
                    android:id="@+id/img_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_professional"
                    tools:ignore="VectorDrawableCompat"
                    tools:srcCompat="@drawable/ic_professional" />

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_nombre"
                        style="@style/text_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:text="@string/lbl_nombre"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColorHint="@color/white"
                        android:hint="@string/hint_nombre"
                        android:inputType="textPersonName" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/mb_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_email_white"
                    tools:ignore="VectorDrawableCompat"
                    tools:srcCompat="@drawable/ic_email_white" />

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblemail"
                        style="@style/text_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_email" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColorHint="@color/white"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/mb_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgphone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_phone_android_24"
                    tools:ignore="VectorDrawableCompat" />

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblphone"
                        style="@style/text_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_telefono" />

                    <EditText
                        android:id="@+id/phoneUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColorHint="@color/white"
                        android:hint="@string/hint_telefono"
                        android:inputType="phone"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/mb_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_password"
                    tools:ignore="VectorDrawableCompat"
                    tools:srcCompat="@drawable/ic_password" />

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblpassword"
                        style="@style/text_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_password" />

                    <EditText
                        android:id="@+id/passwordUSer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColorHint="@color/white"
                        android:hint="@string/hint_password"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/mb_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_cedula"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_dvr_24"
                    tools:ignore="VectorDrawableCompat"
                    tools:srcCompat="@drawable/ic_baseline_dvr_24" />

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_cedula"
                        style="@style/text_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_cedula" />

                    <EditText
                        android:id="@+id/cedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:textColorHint="@color/white"
                        android:hint="@string/hint_cedula"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:paddingBottom="40dp">

                <Button
                    android:id="@+id/btn_registraruser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:onClick="GoMainActivityPaciente"
                    android:text="@string/btn_registrar" />

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:onClick="GoLogin"
                    android:text="@string/btn_cancelar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>